# CHESS

./: CMakeLists.txt  main.cpp
game/: game.h
include/: bishop.h  board.h  figure.h  king.h  knight.h  pawn.h  queen.h  rook.h
src/: bishop.cpp  board.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
